--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -84,24 +84,36 @@
 
 				  <tr>
 					  <td style="width:150px; margin-right:30px;">Event title</td>
-					  <td>{{ data['event-title'] }}</td>
-				  </tr>
-				  <tr>
-					  <td>Webpage</td>
-					  <td><a href="#">[EVENT PAGE LINK]</a></td>
+
+					  {% if session.data['event-title-error'] %}
+					  	<td>Not yet entered</td>
+					  {% else %}
+					  	<td>{{ data['event-title'] }}</td>
+					  {% endif %}
+
 				  </tr>
 				  <tr>
 					  <td>Date and time</td>
-					  <td>{{ data['event-day-of-the-week'] }}
-						  <br>{{data['event-day'] }} {{ data['event-month-name'] }} {{ data['event-year'] }}
-						  <br>{{data['event-start-time'] }} to {{ data['event-finish-time'] }}
-						  <br><a href="#">Add to calendar</a>
-					  </td>
+					  {% if session.data['date-error'] %}
+					  	  <td>Not yet entered</td>
+					  {% else %}
+						  <td>{{ data['event-day-of-the-week'] }}
+							  <br>{{data['event-day'] }} {{ data['event-month-name'] }} {{ data['event-year'] }}
+							  <br>{{data['event-start-time'] }} to {{ data['event-finish-time'] }}
+							  <br><a href="#">Add to calendar</a>
+						  </td>
+					  {% endif %}
 				  </tr>
+
 				  <tr>
 					  <td>Venue</td>
-					  <td style="white-space: pre-wrap; ">{{ data['full-address-holder'] }}
-<a href="#">Map of venue</a></td>
+
+					  {% if session.data['full-address-holder-error'] %}
+					  	<td>Not yet entered</td>
+					  {% else %}
+					  	<td style="white-space: pre-wrap; ">{{ data['full-address-holder'] }}
+						  <a href="#">Map of venue</a></td>
+					  {% endif %}
 				  </tr>
 
 				  {% if data['venue-additional-notes-entered'] == true %}
@@ -112,16 +124,31 @@
 				  {% endif %}
 
 				  <tr>
+					  <td>Name of attendee</td>
+					  <td>[NAME]</td>
+				  </tr>
+
+				  <tr>
+					  <td>Business </td>
+					  <td>[BUSINESS NAME]</td>
+				  </tr>
+
+				  <tr>
 					  <td style="width:150px; padding-right:40px;">Organiser contact details</td>
 					  <td>{{ data['organiser-name'] }}
 						  <br> {{ data['contact-email'] }}
 						  <br> {{ data['contact-phone'] }}</td>
 				  </tr>
 
+				  <tr>
+					  <td>Webpage</td>
+					  <td><a href="#">[EVENT PAGE LINK]</a></td>
+				  </tr>
+
 				  </tbody>
 			  </table>
 
-					<textarea class="form-control" name="event-reg-body" id="event-reg-body" rows="20" style="width: 80%;"
+					<textarea class="form-control" name="event-reg-body" id="event-reg-body" rows="16" style="width: 80%;"
 					>Remember to regularly check the event web page for latest additions to the agenda, confirmed speakers and experts.
 
 If you have any questions or special requests that will help you to get the most out of the day, please don't hesitate to get in touch. We'd be happy to assist.
@@ -131,7 +158,13 @@ We look forward to seeing you on the day.
 Best wishes,
 
 {{ data['organiser-name'] }}
+						
 </textarea>
+
+
+			  <!-- CANCEL -->
+			  <p class="bold" style="margin-top:30px; margin-bottom:5px;">No longer able to attend this event? </p>
+			  <p>Please let us know if [you need to cancel] so that we can free up additional spaces for others.</p>
 
 
 		  </div>
@@ -139,7 +172,9 @@ Best wishes,
 
 		  <div class="form-group" style="margin-top:10px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:25px"><a href="/create-event/template-reg-onwards">I'll complete this later - I don't have this information yet</a></p>
+
+			  <input type="submit" formaction="/create-event/template-reg-skip" value="I'll complete this later - I don't have this information yet"
+					 style="margin-top:25px; border:0px; padding:0px; background-color: transparent; color: #005ea5; text-decoration: underline; cursor: pointer; width:800px; text-align: left;">
 		  </div>
 
 	  </form>
