--- a/app/views/includes/great-header-preview-page.html
+++ b/app/views/includes/great-header-preview-page.html
@@ -49,63 +49,68 @@ main#content {max-width: 1200px}
 
 
 <!--  When the event is not live we should show the big white header -->
-{% if session.liveOrNot == "false"  and  session.data['external-user'] == false %}
-
-  <div style="background-color: #FFFFFF; border-bottom: 10px solid #000000; height:410px; padding-top:0px; padding-bottom:10px; display: flex; " >
-
-    <div style="flex-grow:1"> </div>
-
-    <div style=" margin:20px; margin-top:0px;  width:600px;"  >
-
-        <div class="govuk-box-highlight background--aqua" style="padding-top:60px; padding-bottom:40px;">
-            <h1 class="bold-large" style="margin-bottom:10px" align="center">Event saved as draft<br> </h1>
-        </div>
-
-        <div>
-            <!--<h2 class="heading-medium" style="margin-bottom:10px; margin-top:20px;">Actions</h2>  -->
-            <p class="form-label-bold" style="font-size:18px; font-family: Arial,sans-serif; margin-top:30px;  margin-bottom:15px;" align="left">
-                Share draft: <span style="font-weight:400">www.great.gov.uk/event/mh43dz</span>
-            </p>
-
-            <p style="font-size:16px;" align="left"><a style="font-family: Arial,sans-serif;" href="/create-event/summary">Back to event summary</a></p>
-
-            <p style="font-size:16px;" align="left"><a style="font-family: Arial,sans-serif;" href="/account#draft-events">Account home</a></p>
-
-            <p><a class="button-secondary" style="font-family: Arial,sans-serif; padding: .526315em .789473em .263157em;  font-size: 1.2em;   line-height: 1.25;
-          " href="/create-event/go-live-now">Make event live</a></p>
-
-        </div>
-    </div>
-
-    <div style="flex-grow:1"> </div>
-
-  </div>
-
-{% elif session.liveOrNot == "true"  and  session.data['external-user'] == false %}
-
-    <div style="background-color: #FFFFFF; border-bottom: 10px solid #000000; height:320px; padding-top:0px; padding-bottom:10px; display: flex; " >
+{% if session.externalUser == false %}
+    <!-- These require the ""  -->
+   {% if session.liveOrNot == "false" %}
+      <div style="background-color: #FFFFFF; border-bottom: 10px solid #000000; height:410px; padding-top:0px; padding-bottom:10px; display: flex; " >
 
         <div style="flex-grow:1"> </div>
 
         <div style=" margin:20px; margin-top:0px;  width:600px;"  >
 
             <div class="govuk-box-highlight background--aqua" style="padding-top:60px; padding-bottom:40px;">
-                <h1 class="bold-large" style="margin-bottom:10px" align="center">Live event<br> </h1>
+                <h1 class="bold-large" style="margin-bottom:10px" align="center">Event saved as draft<br> </h1>
             </div>
 
             <div>
-                <p style="font-size:16px; margin-top:30px;" align="left"><a style="font-family: Arial,sans-serif;" href="#">Track and monitor this event</a></p>
+                <!--<h2 class="heading-medium" style="margin-bottom:10px; margin-top:20px;">Actions</h2>  -->
+                <p class="form-label-bold" style="font-size:18px; font-family: Arial,sans-serif; margin-top:30px;  margin-bottom:15px;" align="left">
+                    Share draft: <span style="font-weight:400">www.great.gov.uk/event/mh43dz</span>
+                </p>
+
+                <p style="font-size:16px;" align="left"><a style="font-family: Arial,sans-serif;" href="/create-event/summary">Back to event summary</a></p>
+
+                <p style="font-size:16px;" align="left"><a style="font-family: Arial,sans-serif;" href="/account#draft-events">Account home</a></p>
 
                 <p><a class="button-secondary" style="font-family: Arial,sans-serif; padding: .526315em .789473em .263157em;  font-size: 1.2em;   line-height: 1.25;
-              " href="/account">Account home</a></p>
+              " href="/create-event/go-live-now">Make event live</a></p>
+
             </div>
         </div>
 
         <div style="flex-grow:1"> </div>
 
-    </div>
+      </div>
+
+    <!-- These require the ""  -->
+    {% elif session.liveOrNot == "true" %}
+
+        <div style="background-color: #FFFFFF; border-bottom: 10px solid #000000; height:320px; padding-top:0px; padding-bottom:10px; display: flex; " >
+
+            <div style="flex-grow:1"> </div>
+
+            <div style=" margin:20px; margin-top:0px;  width:600px;"  >
+
+                <div class="govuk-box-highlight background--aqua" style="padding-top:60px; padding-bottom:40px;">
+                    <h1 class="bold-large" style="margin-bottom:10px" align="center">Live event<br> </h1>
+                </div>
+
+                <div>
+                    <p style="font-size:16px; margin-top:30px;" align="left"><a style="font-family: Arial,sans-serif;" href="#">Track and monitor this event</a></p>
+
+                    <p><a class="button-secondary" style="font-family: Arial,sans-serif; padding: .526315em .789473em .263157em;  font-size: 1.2em;   line-height: 1.25;
+                  " href="/account">Account home</a></p>
+                </div>
+            </div>
+
+            <div style="flex-grow:1"> </div>
+
+        </div>
+
+    {% endif %}
 
 {% endif %}
+
 
 
 <div class="navigation">
@@ -202,6 +207,6 @@ main#content {max-width: 1200px}
         padding: 10px 0;
         border-bottom: 1px solid #DDD;">
         <strong class="phase-tag">Alpha</strong>
-        <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</a>.</span>
+        <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</span>
       </p>
     </div>
